# python-parsekit

./: LICENSE  README.md  example.py  setup.cfg  setup.py
parsekit/: __init__.py  combinators.py  primitives.py  typing.py  utils.py
tests/: test_combinators.py  test_primitives.py
