[metadata]
name = python-parsekit
version = attr: parsekit.__version__
description = A parser combinator for Python
author = Jonghwan Hyeon
author_email = jonghwanhyeon93@gmail.com
url = https://github.com/jonghwanhyeon/python-parsekit
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    parser
    parser combinator
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.7
packages = find: